--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@redux-devtools/extension": "^3.2.5",
+    "framer-motion": "^10.13.1",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "primeicons": "^6.0.1",
