--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@redux-devtools/extension": "^3.2.5",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
